Fixed banner image on mobile

--- a/src/styles/5 - components/_banner.scss
+++ b/src/styles/5 - components/_banner.scss
@@ -46,6 +46,5 @@
         width: 100%;
         height: 100%;
         object-fit: contain;
-        transform: translateX(5rem)
     }
 }
